# pyhdlweaver

./: .gitignore  README.md  pyproject.toml
.github/workflows/: c.yml  cocotb.yml  lint.yml  pytest.yml
examples/all_in_one_hft/: all_in_one_hft.py  generate_c.py  generate_sv.py
examples/all_in_one_hft/c/: Makefile  all_in_one_hft.c  all_in_one_hft.h  ctypes_tb_all_in_one_hft.py
examples/all_in_one_hft/hdl/: Makefile  all_in_one_hft_parser_64bit.sv  all_in_one_hft_parser_8bit.sv  cocotb_all_in_one_hft_64bit.py  cocotb_all_in_one_hft_8bit.py
examples/eth_ip/: eth_ip.py  generate_c.py  generate_sv.py  parse_packet.py  report_layout.py
examples/eth_to_mold_dma/: eth_to_mold_dma.py  generate_sv.py
examples/hft_pipelined/: generate_c.py  generate_sv.py
examples/itch/: generate_c.py  generate_sv.py  itch.py
examples/mold_udp/: generate_c.py  generate_sv.py  mold_udp.py
examples/udp/: generate_c.py  generate_sv.py  udp.py
pyhdlweaver/: data_packet.py
pyhdlweaver/actions/: __init__.py  action.py  capture.py  drop.py  length.py  route.py
pyhdlweaver/generators/: __init__.py  code_generator.py  generated_file.py
pyhdlweaver/protocols/: __init__.py  discriminated_protocol.py  fixed_protocol.py  length_prefixed_discriminated_sub_protocol.py  length_prefixed_protocol.py  multi_message_protocol.py  protocol.py  sideband_protocol.py  variable_protocol.py
pyhdlweaver/stream/: axi_stream.py
tests/generators/: test_c_generator.py  test_systemverilog.py
tests/protocols/: test_actions.py  test_eth_ip_parser.py  test_fields.py  test_protocols.py
(+107 files in other folders)
