[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhdlweaver"
version = "0.1.0"
description = "Python HDL Protocol Weaver"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["pyhdlweaver*"]
