[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhdlweaver"
version = "0.1.0"
description = "Python HDL Protocol Weaver"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["jinja2"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
hdl = [
    "cocotb",
    "cocotbext-axi",
    "scapy",
]

[tool.setuptools.packages.find]
include = ["pyhdlweaver*"]
